# config-api

./: .dockerignore  .editorconfig  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: commitlint.yml  release.yml  tests.yml  vulnerability-scan.yml
integration/: docker-compose.yml  push-data.mongodb  smoke_test.sh  test.hurl
src/: channel.rs  config.rs  db.rs  health.rs  http_api.rs  lib.rs  main.rs  problem.rs  rfc7807.rs
tests/: test.json  test.toml
tests/snapshots/: static_config_api__config__tests__toml_to_json.snap
