[package]
name = "config-api"
version = "2.4.3"
description = "Configuration data HTTP API."
authors = [ "Arnaud Rocher <arnaud.roche3@gmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap-verbosity-flag = "2.0"
futures-util = "0.3"
mongodb = "3.0"
reqwest = { version = "0.12", default-features = false }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tracing = "0.1"

[dependencies.axum]
version = "0.7"
default-features = false
features = [ "http1", "json", "tokio" ]

[dependencies.clap]
version = "4.4"
default-features = false
features = [ "std", "help", "usage", "error-context", "derive", "env" ]

[dependencies.tokio]
version = "1.33"
features = [ "io-util", "fs", "macros", "rt-multi-thread", "sync" ]

[dependencies.tracing-log]
version = "0.2"
default-features = false
features = [ "std", "log-tracer" ]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [ "ansi", "fmt", "parking_lot", "smallvec", "std" ]

[dev-dependencies]
tower = { version = "0.5", default-features = false, features = [ "util" ] }
