[package]
name = "config-api"
version = "2.4.8"
description = "Configuration data HTTP API."
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
futures-util = "0.3.31"
reqwest = { version = "0.13.1", default-features = false }
signal-hook = "0.4.1"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dependencies.axum]
version = "0.8.8"
default-features = false
features = ["http1", "json", "tokio"]

[dependencies.mongodb]
version = "3.4.1"
default-features = false
features = ["bson-3", "compat-3-3-0", "dns-resolver", "rustls-tls"]

[dependencies.tokio]
version = "1.48.0"
features = ["io-util", "fs", "macros", "rt-multi-thread", "sync"]

[dev-dependencies]
tower = { version = "0.5.2", default-features = false, features = ["util"] }
trycmd = "0.15.11"
